--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Borel&family=Preahvihear&display=swap');
+
+
+
 *{
     margin: 0;
     padding: 0;
-   
+    font-family: 'Preahvihear', sans-serif;
 }
 
 body {
@@ -15,16 +20,17 @@ body {
 section {
     
     background-color: white;
-    padding: 10px;
-    width: fit-content;
+    padding: 20px 10px;
+    width: max-content;
     border-radius: 6px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 
 }
 
+
 h1{
     text-align: center;
-    margin-bottom: 10px;
+    
     font-size: 4rem;
 }
 
@@ -36,8 +42,8 @@ h1{
 
 input{
     width: 90%;
-    padding: 10px 5px;
-    height: 19px;
+    padding:  5px;
+    height: 30px;
     border: 1px solid rgb(158, 154, 154);
     outline: 0;
     border-radius: 6px 0 0 6px;
@@ -46,12 +52,19 @@ input{
 
 button {
     width : 10%;
+    padding:  5px;
     font-size: 20px;
-    height: 40px;
-    border: 0;
+    height: 42px;
+    border: 1px solid rgb(158, 154, 154);
     background-color: rgb(114, 114, 233);
     color: #ffffff;
     border-radius: 0 6px 6px 0;
+}
+
+button:hover{
+    background-color: rgb(92, 92, 219);
+    color: rgb(134, 134, 134);
+
 }
 
 .pStyle{
@@ -71,7 +84,7 @@ button {
 }
 
 .pClick{
-background-color: rgb(206, 59, 59);
+background-color: rgb(201, 74, 74);
 text-decoration: line-through;
 }
 
@@ -81,4 +94,10 @@ from {
 }
 
 
+}
+
+.parag {
+
+    text-align: center;
+    color: rgb(119, 119, 226);
 }
