--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Borel&family=Preahvihear&display=swap');
 
+:root {
+    --main-color: #5e548e;
+    --accent-color: #231942;
+    --background-color: #9f86c0;
+    --border-color: #231942;
+    --shadow-color: #231942;
+    --text-color: #5e548e;
+    --highlight-color: #e0b1cb;
+}
 
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Preahvihear', sans-serif;
 }
 
 body {
-    background-color: rgb(114, 114, 233);
+    background-color: var(--background-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,86 +25,140 @@ body {
 }
 
 section {
-    
     background-color: white;
     padding: 20px 10px;
     width: max-content;
     border-radius: 6px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-
+    box-shadow: 0 0 10px var(--shadow-color);
+    z-index: 5;
 }
 
-
-h1{
+h1 {
     text-align: center;
-    
+    color: var(--accent-color);
     font-size: 4rem;
 }
 
-.input{
+.input {
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
-input{
+input {
     width: 90%;
-    padding:  5px;
+    padding: 5px;
     height: 30px;
-    border: 1px solid rgb(158, 154, 154);
+    border: 1px solid var(--border-color);
     outline: 0;
     border-radius: 6px 0 0 6px;
-
 }
 
 button {
-    width : 10%;
-    padding:  5px;
+    width: 10%;
+    padding: 5px;
     font-size: 20px;
     height: 42px;
-    border: 1px solid rgb(158, 154, 154);
-    background-color: rgb(114, 114, 233);
+    border: 1px solid var(--border-color);
+    background-color: var(--main-color);
     color: #ffffff;
     border-radius: 0 6px 6px 0;
 }
 
-button:hover{
-    background-color: rgb(92, 92, 219);
-    color: rgb(134, 134, 134);
-
+button:hover {
+    background-color: var(--highlight-color);
+    color: var(--text-color);
 }
 
-.pStyle{
+.pStyle {
     margin: 10px 0;
     padding: 10px 0;
-    padding-left:5px;
+    padding-left: 5px;
     border-radius: 6px;
-    color: rgb(255, 255, 255);
-    background-color: rgb(114, 114, 233);
-    word-break : break-all;
+    color: #ffffff;
+    background-color: var(--highlight-color);
+    word-break: break-all;
     cursor: pointer;
-    animation : anime 0.5s linear;
+    animation: anime 0.5s linear;
 }
 
-.pStyle:last-child{
+.pStyle:last-child {
     margin-bottom: 0;
 }
 
-.pClick{
-background-color: rgb(201, 74, 74);
-text-decoration: line-through;
+.pClick {
+    background-color: var(--accent-color);
+    text-decoration: line-through;
 }
 
 @keyframes anime {
-from {
-    transform: translateY(50px);
-}
-
-
+    from {
+        transform: translateY(50px);
+    }
 }
 
 .parag {
-
     text-align: center;
-    color: rgb(119, 119, 226);
+    color: var(--text-color);
+}
+
+svg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+}
+
+.links {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    font-size: 18px;
+    font-family: sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    margin-left: 1em;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a img.icon {
+    display: inline-block;
+    height: 1em;
+    margin: 0 0 -0.1em 0.3em;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.out-top {
+    animation: rotate 20s linear infinite;
+    transform-origin: 13px 25px;
+}
+
+.in-top {
+    animation: rotate 10s linear infinite;
+    transform-origin: 13px 25px;
+}
+
+.out-bottom {
+    animation: rotate 25s linear infinite;
+    transform-origin: 84px 93px;
+}
+
+.in-bottom {
+    animation: rotate 15s linear infinite;
+    transform-origin: 84px 93px;
 }
