--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ button:hover {
 }
 
 .pStyle {
+    
     margin: 10px 0;
     padding: 10px 0;
     padding-left: 5px;
@@ -80,6 +81,8 @@ button:hover {
     word-break: break-all;
     cursor: pointer;
     animation: anime 0.5s linear;
+    -webkit-box-shadow: 0px 6px 11px 4px rgba(0,0,0,0.89); 
+    box-shadow: 0px 6px 11px 4px rgba(0,0,0,0.89);
 }
 
 .pStyle:last-child {
