--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ button:hover {
 }
 
 .pStyle {
-    
+    text-align: center;
     margin: 10px 0;
     padding: 10px 0;
     padding-left: 5px;
@@ -81,8 +81,8 @@ button:hover {
     word-break: break-all;
     cursor: pointer;
     animation: anime 0.5s linear;
-    -webkit-box-shadow: 0px 6px 11px 4px rgba(0,0,0,0.89); 
-    box-shadow: 0px 6px 11px 4px rgba(0,0,0,0.89);
+    -webkit-box-shadow: 0px 6px 11px 4px rgba(82, 33, 92, 0.89); 
+    box-shadow: 0px 6px 11px 4px rgba(82, 33, 92, 0.89);
 }
 
 .pStyle:last-child {
@@ -165,3 +165,38 @@ a img.icon {
     animation: rotate 15s linear infinite;
     transform-origin: 84px 93px;
 }
+
+
+.alert {
+    position: fixed;
+    top: 10%;
+    right: 1%;
+    padding: 5px 20px;
+    color: var(--accent-color);
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+    justify-content: center;
+    text-align: center;
+    row-gap: 10vh;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgb(255, 255, 255);
+    background-color: rgb(155, 111, 163);
+    border: 2px solid rgb(122, 60, 134);
+  }
+            
+  .closebtn {
+    margin-left: 15px;
+    color: var(--accent-color);
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+    color: black;
+  }
+
